--- a/AlbergueAnimal/AlbergueAnimal.csproj
+++ b/AlbergueAnimal/AlbergueAnimal.csproj
@@ -13,6 +13,11 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.6" PrivateAssets="All" />
 	<DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.2.0" />
 	<PackageReference Include="Rotativa.AspNetCore" Version="1.1.1" />
+	<PackageReference Include="Sendgrid" Version="9.10.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Properties\PublishProfiles\" />
   </ItemGroup>
 
 </Project>
